Fix bottom control background to higher contrast.

--- a/src/components/RadioPlayer/RadioControlPanel.scss
+++ b/src/components/RadioPlayer/RadioControlPanel.scss
@@ -4,7 +4,7 @@
   padding: 20px 10px;
   width: 100vw;
   z-index: 1000;
-  background-color: $colorPurple;
+  background-color: darken($colorPurple, 0.25);
   display: flex;
   flex-direction: row;
   justify-content: center;
